fix(conditionlockmenu): the settings cell column has too much space, set the width to 110px to solve

--- a/src/components/ConditionLockMenu/ConditionLockMenu.scss
+++ b/src/components/ConditionLockMenu/ConditionLockMenu.scss
@@ -195,6 +195,13 @@ tbody::-webkit-scrollbar-thumb {
   display: table-cell;
   padding: 2px;
   padding-left: 10px;
+  vertical-align: middle;
+}
+#react-autoql-remove-filter-container {
+  width: 35px;
+}
+#react-autoql-condition-table-settings {
+  width: 110px;
 }
 
 .react-autoql-condition-list-loading-container {
